# DLRW

./: .gitignore  0_FixExecutionPolicy.ps1  LICENSE  Launch_GUI_Admin.bat  Launch_GUI_Fixed.bat  README.md  excluded_dirs.json  fixed_steam_scan_gui_patch.ps1  game_scan_better.ps1  gamelist_small.json  gui_launch_log.txt  implementation.txt  json_to_json.ps1  json_to_json_refined.ps1  packed_repo.md  pyproject.toml  requirements.txt  run.py  scheduler_integration.ps1  setup.cfg  steam_manifest_results.txt  steam_scan.ps1  steam_scan_gui_patch.ps1
.github/workflows/: python-app.yml
automator/: automation_engine.py  backup_manager.py  gui.py  main.py  profile_manager.py  scan_steam_patch.py  scanner.py  scheduler.py  settings_manager.py
configs/: default_settings.json
docs/: architecture.md  configuration.md  profiles.md
tests/: test_engine.py  test_placeholder.py
